Fix vertical outermost white space calculation
This space is relative to the left outermost white space (divided by
1.25^2).

--- a/src/css/component/pages.css
+++ b/src/css/component/pages.css
@@ -11,8 +11,8 @@
 	grid-template-areas: var(--grid-template-areas);
 	grid-template-columns: var(--grid-template-columns);
 	list-style-type: none;
-	margin-top: 0;
 	padding-left: 0;
+	row-gap: var(--space-tiny);
 }
 
 .pages > li {
@@ -22,6 +22,7 @@
 	grid-area: var(--grid-area);
 	margin-right: 0.5rem;
 	margin-inline-end: var(--margin-inline-end);
+	margin-block-start: 0;
 }
 
 .pages > li:nth-child(1) {
