--- a/src/css/core.css
+++ b/src/css/core.css
@@ -21,7 +21,7 @@ body {
 	margin: 1.5rem auto;
 	margin-block-end: var(--space-vertical-body);
 	margin-inline-start: var(--space-left-body);
-	margin-block-start: calc(var(--space-vertical-body) - var(--space-tiny));
+	margin-block-start: var(--space-vertical-body);
 	max-width: 40rem;
 	max-width: var(--width-column);
 	padding-left: 1rem;
